# Libccnx-common

./: .gitignore  CMakeLists.txt  README.md
ccnx/common/: CMakeLists.txt  ccnx_BufferChunker.c  ccnx_BufferChunker.h  ccnx_Chunker.c  ccnx_Chunker.h  ccnx_ContentObject.c  ccnx_ContentObject.h  ccnx_FileChunker.c  ccnx_FileChunker.h  ccnx_Interest.c  ccnx_Interest.h  ccnx_InterestPayloadId.c  ccnx_InterestPayloadId.h  ccnx_InterestReturn.c  ccnx_InterestReturn.h  ccnx_Json.c  ccnx_Json.h  ccnx_KeyLocator.c  ccnx_KeyLocator.h  ccnx_KeystoreUtilities.c  ccnx_KeystoreUtilities.h  ccnx_Link.c  ccnx_Link.h  ccnx_Manifest.c  ccnx_Manifest.h  ccnx_ManifestSection.c  ccnx_ManifestSection.h  ccnx_Name.c  ccnx_Name.h  ccnx_NameLabel.c  ccnx_NameLabel.h  ccnx_NameSegment.c  ccnx_NameSegment.h  ccnx_NameSegmentNumber.c  ccnx_NameSegmentNumber.h  ccnx_PayloadType.h  ccnx_TimeStamp.c  ccnx_TimeStamp.h  ccnx_WireFormatMessage.c  ccnx_WireFormatMessage.h  (+2 more)
ccnx/common/codec/: ccnxCodec_EncodingBuffer.c  ccnxCodec_EncodingBuffer.h  ccnxCodec_Error.c  ccnxCodec_Error.h  ccnxCodec_ErrorCodes.h  ccnxCodec_NetworkBuffer.c  ccnxCodec_NetworkBuffer.h  ccnxCodec_TlvDecoder.c  ccnxCodec_TlvDecoder.h  ccnxCodec_TlvEncoder.c  ccnxCodec_TlvEncoder.h  ccnxCodec_TlvPacket.c  ccnxCodec_TlvPacket.h  ccnxCodec_TlvUtilities.c  ccnxCodec_TlvUtilities.h
ccnx/common/codec/schema_v1/: ccnxCodecSchemaV1_CryptoSuite.c  ccnxCodecSchemaV1_CryptoSuite.h  ccnxCodecSchemaV1_FixedHeader.h  ccnxCodecSchemaV1_FixedHeaderDecoder.c  ccnxCodecSchemaV1_FixedHeaderDecoder.h  ccnxCodecSchemaV1_FixedHeaderEncoder.c  ccnxCodecSchemaV1_FixedHeaderEncoder.h  ccnxCodecSchemaV1_LinkCodec.c  ccnxCodecSchemaV1_LinkCodec.h  ccnxCodecSchemaV1_MessageDecoder.c  ccnxCodecSchemaV1_MessageDecoder.h  ccnxCodecSchemaV1_MessageEncoder.c  ccnxCodecSchemaV1_MessageEncoder.h  ccnxCodecSchemaV1_NameCodec.c  ccnxCodecSchemaV1_NameCodec.h  ccnxCodecSchemaV1_NameSegmentCodec.c  ccnxCodecSchemaV1_NameSegmentCodec.h  ccnxCodecSchemaV1_OptionalHeadersDecoder.c  ccnxCodecSchemaV1_OptionalHeadersDecoder.h  ccnxCodecSchemaV1_OptionalHeadersEncoder.c  ccnxCodecSchemaV1_OptionalHeadersEncoder.h  ccnxCodecSchemaV1_PacketDecoder.c  ccnxCodecSchemaV1_PacketDecoder.h  ccnxCodecSchemaV1_PacketEncoder.c  ccnxCodecSchemaV1_PacketEncoder.h  ccnxCodecSchemaV1_TlvDictionary.c  ccnxCodecSchemaV1_TlvDictionary.h  ccnxCodecSchemaV1_Types.h  ccnxCodecSchemaV1_ValidationDecoder.c  ccnxCodecSchemaV1_ValidationDecoder.h  ccnxCodecSchemaV1_ValidationEncoder.c  ccnxCodecSchemaV1_ValidationEncoder.h
ccnx/common/codec/schema_v1/test/: test_ccnxCodecSchemaV1_CryptoSuite.c  test_ccnxCodecSchemaV1_FixedHeaderDecoder.c  test_ccnxCodecSchemaV1_FixedHeaderEncoder.c  test_ccnxCodecSchemaV1_LinkCodec.c  test_ccnxCodecSchemaV1_MessageDecoder.c  test_ccnxCodecSchemaV1_MessageEncoder.c  test_ccnxCodecSchemaV1_NameCodec.c  test_ccnxCodecSchemaV1_NameSegmentCodec.c  test_ccnxCodecSchemaV1_OptionalHeadersDecoder.c  test_ccnxCodecSchemaV1_OptionalHeadersEncoder.c  test_ccnxCodecSchemaV1_PacketDecoder.c  test_ccnxCodecSchemaV1_PacketEncoder.c  test_ccnxCodecSchemaV1_TlvDictionary.c  test_ccnxCodecSchemaV1_ValidationDecoder.c  test_ccnxCodecSchemaV1_ValidationEncoder.c  testrig_encoder.c  testrig_packetwrapper.c
ccnx/common/codec/schema_v1/testdata/: v1_CPISchema.h  v1_ContentObjectSchema.h  v1_InterestSchema.h  v1_content_nameA_crc32c.h  v1_content_nameA_keyid1_rsasha256.h  v1_content_no_payload.h  v1_content_zero_payload.h  v1_cpi_add_route.h  v1_cpi_add_route_crc32c.h  v1_interest_all_fields.h  (+8 more)
ccnx/common/codec/test/: test_ccnxCodec_EncodingBuffer.c  test_ccnxCodec_Error.c  test_ccnxCodec_NetworkBuffer.c  test_ccnxCodec_TlvDecoder.c  test_ccnxCodec_TlvEncoder.c  test_ccnxCodec_TlvPacket.c  test_ccnxCodec_TlvUtilities.c  testrig_Compare.c
ccnx/common/codec/testdata/: testdata_common.h  tlv_Schema.h
ccnx/common/internal/: ccnx_ChunkingFacadeV1.c  ccnx_ChunkingFacadeV1.h  ccnx_ContentObjectFacadeV1.c  ccnx_ContentObjectFacadeV1.h  ccnx_ContentObjectInterface.c  ccnx_ContentObjectInterface.h  ccnx_InterestDefault.c  ccnx_InterestDefault.h  ccnx_InterestFacadeV1.c  ccnx_InterestFacadeV1.h  ccnx_InterestInterface.c  ccnx_InterestInterface.h  ccnx_InterestPayloadIdMethod.h  ccnx_InterestReturnFacadeV1.c  ccnx_InterestReturnFacadeV1.h  ccnx_InterestReturnInterface.c  ccnx_InterestReturnInterface.h  ccnx_MessageInterface.h  ccnx_TlvDictionary.c  ccnx_TlvDictionary.h  ccnx_TlvError.c  ccnx_ValidationFacadeV1.c  ccnx_ValidationFacadeV1.h  ccnx_WireFormatFacadeV1.c  ccnx_WireFormatFacadeV1.h  ccnx_WireFormatMessageInterface.c  ccnx_WireFormatMessageInterface.h
ccnx/common/internal/test/: CMakeLists.txt  test_ccnx_ChunkingFacadeV0.c  test_ccnx_ChunkingFacadeV1.c  test_ccnx_ContentObjectFacadeV0.c  test_ccnx_ContentObjectFacadeV1.c  test_ccnx_ContentObjectInterface.c  test_ccnx_InterestFacadeV0.c  test_ccnx_InterestFacadeV1.c  test_ccnx_InterestInterface.c  test_ccnx_InterestReturnFacadeV1.c  test_ccnx_InterestReturnInterface.c  test_ccnx_TlvDictionary.c  test_ccnx_ValidationFacadeV0.c  test_ccnx_ValidationFacadeV1.c  test_ccnx_WireFormatFacadeV1.c
ccnx/common/test/: CMakeLists.txt  test_ccnx_BufferChunker.c  test_ccnx_Chunker.c  test_ccnx_ContentObject.c  test_ccnx_FileChunker.c  test_ccnx_Interest.c  test_ccnx_InterestPayloadId.c  test_ccnx_InterestReturn.c  test_ccnx_Json.c  test_ccnx_Key.c  test_ccnx_KeyLocator.c  test_ccnx_KeystoreUtilities.c  test_ccnx_Link.c  test_ccnx_Manifest.c  test_ccnx_ManifestSection.c  test_ccnx_Name.c  test_ccnx_NameLabel.c  test_ccnx_NameSegment.c  test_ccnx_NameSegmentNumber.c  test_ccnx_TimeStamp.c  test_ccnx_WireFormatMessage.c
ccnx/common/validation/: ccnxValidation_CRC32C.c  ccnxValidation_CRC32C.h  ccnxValidation_EcSecp256K1.c  ccnxValidation_EcSecp256K1.h  ccnxValidation_HmacSha256.c  ccnxValidation_HmacSha256.h  ccnxValidation_RsaSha256.c  ccnxValidation_RsaSha256.h
ccnx/common/validation/test/: test_ccnxValidation_CRC32C.c  test_ccnxValidation_EcSecp256K1.c  test_ccnxValidation_HmacSha256.c  test_ccnxValidation_RsaSha256.c  testrig_validation.c
(+1 files in other folders)
